# entropy_test

./: .gitmodules  CMakeLists.txt  ChangeLog  LICENSE  README  README.MD  main.c
tools/: ent  rngtest
